<resources>

    <string name="app_name">InfoSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">高校信息查询平台</string>
    <string name="title">欢迎登录</string>
    <string name="name">用户名</string>
    <string name="psd">密码</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="register">注册</string>
    <string name="main">主功能菜单</string>
    <string name="fileUpload">文件上传</string>
    <string name="downLoad">资料下载</string>
    <string name="infoQuery">信息查询</string>
    <string name="re_psd">确认密码</string>
    <string name="register_title">欢迎注册</string>
    <string name="namehint">用户名不为空</string>
    <string name="psdhint">密码长度3~15</string>
    <string name="select_file">选择文件</string>
    <string name="upload">上传文件</string>
    <string name="file_path">文件名</string>
    <string name="file_content">文件内容</string>
    <string name="parent">父目录</string>
    <string name="down_title">可下载的文件</string>
    <string name="hint">请输入你想查找的信息</string>
    <string name="book_query">图书查询</string>
    <string name="grade_query">成绩查询</string>
    <string name="grade_id">编号</string>
    <string name="num">学号</string>
    <string name="course_name">课程名称</string>
    <string name="credit">学分</string>
    <string name="score">分数</string>
    <string name="book_id">图书编号</string>
    <string name="book_name">图书名称</string>
    <string name="book_price">图书价格</string>
    <string name="book_author">图书作者</string>
    <string name="book_press">图书出版社</string>

</resources>