<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffcc"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigator"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namehint"
            android:textColor="#ff0000"
            android:textSize="16sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psd"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psdhint"
            android:textColor="#ff0000"
            android:textSize="16sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_psd"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/repsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <Button
            android:id="@+id/reset"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>

</TableLayout>