<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffcc"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >
    <EditText
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bookQuery"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/book_query" />

        <Button
            android:id="@+id/gradeQuery"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/grade_query" />
    </LinearLayout>
    <ListView
        android:id="@+id/result"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        />
</LinearLayout>